# box-diff

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
boxdiff/: __init__.py  diff.py
boxdiff/models/: __init__.py  core.py  deltas.py  flags.py
tests/: test_boxdiff.py
