[tool.poetry]
name = "boxdiff"
version = "0.1.0"
description = "Utilities for comparing bounding boxes"
authors = ["Kevin Barnard <kbarnard@mbari.org>"]

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = "^0.5.7"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
